added Christian Plessl to the list of contributors

--- a/README
+++ b/README
@@ -58,6 +58,7 @@ want to explore nanoc from a technical perspective.
 
 (In alphabetical order)
 
+* Christian Plessl
 * Colin Barrett
 * Dmitry Bilunov
 * Šime Ramov
