--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ Removed:
 * Removed support for drafts
 * Removed support for binary assets
 * Removed support for templates
+* Removed everything that was deprecated in nanoc 2.x
 
 2.1.5
 -----
