--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ New:
 * relativize_paths filter
 * rainpress filter
 * create_page and create_layout methods in data sources
+* Filtering helper
 
 Removed:
 
