converted NEWS to RDoc format
--HG--
rename : NEWS => NEWS.rdoc

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,8 +1,6 @@
-nanoc News
-==========
+= nanoc News
 
-3.0
----
+== 3.0
 
 Changed:
 
@@ -28,8 +26,7 @@ Removed:
 * Removed everything that was deprecated in nanoc 2.x
 * save_*, move_* and delete_* methods in data sources
 
-2.1.6
------
+== 2.1.6
 
 * The FilesystemCombined data source now supports empty metadata sections
 * The RDoc filter now works for both RDoc 1.x and 2.x
@@ -39,40 +36,34 @@ Removed:
   end with a slash
 * The autocompiler now always serves asset content correctly
 
-2.1.5
------
+== 2.1.5
 
 * Added Ruby 1.9 compatibility
 * The Filesystem and FilesystemCombined data sources now preserve custom
   extensions
 
-2.1.4
------
+== 2.1.4
 
 * Fixed an issue where the autocompiler in Windows would serve broken assets
 
-2.1.3
------
+== 2.1.3
 
 * The Haml and Sass filters now correctly take their options from assets
 * Autocompiler now serves index files instead of 404s
 * Layouts named "index" are now handled correctly
 * filesystem_combined now properly handles assets
 
-2.1.2
------
+== 2.1.2
 
 * Autocompiler now compiles assets as well
 * Sass filter now takes options (just like the Haml filter)
 * Haml/Sass options are now taken from the page *rep* instead of the page
 
-2.1.1
------
+== 2.1.1
 
 * Fixed issue which would cause files not to be required in the right order
 
-2.1
----
+== 2.1
 
 This is only a short summary of all changes in 2.1. For details, see the nanoc
 web site at <http://nanoc.stoneship.org/> -- especially the blog and the
@@ -101,32 +92,27 @@ Removed:
 	* `markdown`: use `bluecloth`, `rdiscount` or `maruku` instead
 	* `textile`: use `redcloth` instead
 
-2.0.4
------
+== 2.0.4
 
 * Fixed default.rb's `html_escape`
 * Updated Haml filter and layout processor so that @page, @pages and @config
   are now available as instance variables instead of local variables
 
-2.0.3
------
+== 2.0.3
 
 * The autocompiler now honors custom paths
 * The autocompiler now attempts to serve pages with the most appropriate MIME
   type, instead of always serving everything as "text/html"
 
-2.0.2
------
+== 2.0.2
 
 * nanoc now requires Ruby 1.8.5 instead of 1.8.6
 
-2.0.1
------
+== 2.0.1
 
 * Fixed a "too many open files" error that could appear during (auto)compiling
 
-2.0
----
+== 2.0
 
 New:
 
@@ -147,18 +133,15 @@ Removed:
 * The `filters` property; use `filters_pre` instead
 * Support for Liquid
 
-1.6.2
------
+== 1.6.2
 
 * Fixed an issue which prevented the content capturing plugin from working
 
-1.6.1
------
+== 1.6.1
 
 * Removed a stray debug message
 
-1.6
----
+== 1.6
 
 * Added support for post-layout filters
 * Added support for getting a File object for the page, so you can now e.g.
@@ -166,16 +149,14 @@ Removed:
 * Cleaned up the source code a lot
 * Removed deprecated asset-copying functionality
 
-1.5
----
+== 1.5
 
 * Added support for custom filters
 * Improved Liquid support -- Liquid is now a first-class nanoc citizen
 * Deprecated assets -- use something like rsync instead
 * Added eruby_engine option, which can be 'erb' or 'erubis'
 
-1.4
----
+== 1.4
 
 * nanoc now supports ERB (as well as Erubis); Erubis no longer is a dependency
 * meta.yaml can now have haml_options property, which is passed to Haml
@@ -184,14 +165,12 @@ Removed:
 * Pages now know in what order they should be compiled, eliminating the need
   for custom page ordering [Dennis Sutch]
 
-1.3.1
------
+== 1.3.1
 
 * The contents of the 'assets' directory are now copied into the output
   directory specified in 'config.yaml'
 
-1.3
----
+== 1.3
 
 * The @pages array now also contains uncompiled pages
 * Pages with 'skip_output' set to true will not be outputted
@@ -201,8 +180,7 @@ Removed:
 * nanoc now warns before overwriting in create_site, create_page and
   create_template (but not in compile)
 
-1.2
----
+== 1.2
 
 * Sites now have an 'assets' directory, whose contents are copied to the
   'output' directory when compiling [Soryu]
@@ -214,19 +192,16 @@ Removed:
 * Page attributes can now be accessed using dot notation, i.e. @page.title as
   well as @page[:title]
 
-1.1.3
------
+== 1.1.3
 
 * Fixed bug which would cause layoutless pages to be outputted incorrectly
 
-1.1.2
------
+== 1.1.2
 
 * Backup files (files ending with a “~”) are now ignored
 * Fixed bug which would cause subpages not to be generated correctly
 
-1.1
----
+== 1.1
 
 * Added support for nested layouts
 * Added coloured logging
@@ -235,14 +210,12 @@ Removed:
   directory they are in [Colin Barrett]
 * It is now possible to access @page in the page’s content file
 
-1.0.1
------
+== 1.0.1
 
 * Fixed a bug which would cause a “no such template” error to be displayed
   when the template existed but compiling it would raise an exception
 * Fixed bug which would cause pages not to be sorted by order before compiling
 
-1.0
----
+== 1.0
 
 * Initial release
