--- a/README.rdoc
+++ b/README.rdoc
@@ -54,6 +54,16 @@ The namespaces (modules) are organised like this:
 The central class in nanoc is Nanoc3::Site, so you should start there if you
 want to explore nanoc from a technical perspective.
 
+== Dependencies
+
+nanoc itself can be used without installing any dependencies. Some components, however, do have dependencies:
+
+autocompiler::             +mime-types+, +rack+
+documentation generation:: +rdoc+ (2.4 or newer), +yardoc+
+packaging::                +rubygems+ (1.3 or newer)
+
+You may need to manually install the rdoc gem and update the rubygems installation.
+
 == Contributors
 
 (In alphabetical order)
