--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -2,28 +2,24 @@
 
 == 3.0
 
-Changed:
-
-* Dependencies between pages are now tracked properly
-* The commandline option parser is now a lot more reliable
-
 New:
 
 * Filters can now optionally take arguments
-* The current layout is now accessible through the @layout variable
-* relative_path_to function in LinkTo helper
-* relativize_paths filter
-* rainpress filter
 * create_page and create_layout methods in data sources
-* Filtering helper
+* A new way to specify compilation/mapping rules using a Rules file
+
+Changed:
+
+* Pages and textual assets are now known as "items"
 
 Removed:
 
-* Removed support for drafts
-* Removed support for binary assets
-* Removed support for templates
-* Removed everything that was deprecated in nanoc 2.x
+* Support for drafts
+* Support for binary assets
+* Support for templates
+* Everything that was deprecated in nanoc 2.x
 * save_*, move_* and delete_* methods in data sources
+* Processing instructions in metadata
 
 == 2.2.2
 
