renamed map to route

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -6,7 +6,7 @@ New:
 
 * Filters can now optionally take arguments
 * create_page and create_layout methods in data sources
-* A new way to specify compilation/mapping rules using a Rules file
+* A new way to specify compilation/routing rules using a Rules file
 * Coderay filter
 
 Changed:
