--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -4,6 +4,7 @@
 
 New:
 
+* Dependency tracking between items
 * Filters can now optionally take arguments
 * create_page and create_layout methods in data sources
 * A new way to specify compilation/routing rules using a Rules file
