--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
 For a list of all changes, please see the changelog on the project repository
-instead (http://projects.stoneship.org/hg/shared/nanoc/shortlog). For release
-notes, please see the NEWS file.
+instead (http://projects.stoneship.org/hg/nanoc/shortlog). For release notes,
+please see the NEWS file.
