--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -10,6 +10,7 @@ New:
 * create_page and create_layout methods in data sources
 * A new way to specify compilation/routing rules using a Rules file
 * Coderay filter
+* A filesystem_compact data source which uses less directories
 
 Changed:
 
