--- a/README.rdoc
+++ b/README.rdoc
@@ -10,8 +10,9 @@ Markdown, etc.
 nanoc3's web site, which can be found at http://nanoc.stoneship.org, contains a
 few useful resources to help you get started with nanoc:
 
-* The tutorial at http://nanoc.stoneship.org/help/tutorial
-* The manual at http://nanoc.stoneship.org/help/manual
+* The tutorial at http://nanoc.stoneship.org/tutorial
+* The manual at http://nanoc.stoneship.org/manual
+* The migration guide at http://nanoc.stoneship.org/migrating
 
 It is probably also worth checking out and perhaps subscribing to the
 discussion groups:
