--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -7,6 +7,10 @@ New:
 * A Item#rep(name) function for quickly getting a certain rep
 * The new "+" wildcard in rule patterns now matches one or more characters
 
+Changed:
+
+* The "filesystem" data source is now known as "filesystem_verbose"
+
 == 3.0
 
 New:
