completed release notes for 3.0.1 to NEWS
--HG--
branch : 3.0.x

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -4,6 +4,11 @@
 
 * The proper exception is now raised when no matching compilation rules can
   be found
+* The autocompile command no longer has a duplicate --port option
+* The #url_for and #feed_url methods now check the presence of the base_url
+  site configuration attribute
+* Several outdated URLs are now up-to-date
+* Error handling has been improved in general
 
 == 3.0
 
