added Starr Horne to list of contributors

--- a/README.rdoc
+++ b/README.rdoc
@@ -72,6 +72,7 @@ You may need to manually install the rdoc gem and update the rubygems installati
 * Dmitry Bilunov
 * Šime Ramov
 * "Soryu"
+* Starr Horne
 * Dennis Sutch
 
 Special thanks to Ale Muñoz.
