--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -6,6 +6,7 @@ New:
 
 * A Item#rep(name) function for quickly getting a certain rep
 * The new "+" wildcard in rule patterns now matches one or more characters
+* An Item#compiled_content function for quickly getting compiled content
 
 Changed:
 
