--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -4,7 +4,7 @@
 
 New:
 
-* A Item#rep(name) function for quickly getting a certain rep
+* An Item#rep(name) function for quickly getting a certain rep
 * The new "+" wildcard in rule patterns now matches one or more characters
 * An Item#compiled_content function for quickly getting compiled content
 
