--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,12 @@
 = nanoc News
 
+== 3.0.2
+
+* Children-only identifier patterns no longer erroneously also match parent
+  (e.g. /foo/*/ no longer matches /foo/)
+* The create_site command no longer uses those ugly HTML entities
+* Install message now mentions the IRC channel
+
 == 3.0.1
 
 * The proper exception is now raised when no matching compilation rules can
