added release notes for 3.0.4

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,11 @@
 = nanoc News
 
+== 3.0.4
+
+* Fixed a bug which would cause the filesystem_compact data source to
+  incorrectly determine the content filename, leading to weird “Expected 1
+  content file but found 3” errors [Eric Sunshine]
+
 == 3.0.3
 
 * The Blogging helper now properly handles item reps without paths
