added release notes for 3.0.5
--HG--
branch : 3.0.x

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,13 @@
 = nanoc News
 
+== 3.0.5
+
+* Restored pre-3.0.3 behaviour of periods in identifiers. By default, a file
+  can have multiple extensions (e.g. content/foo.html.erb will have the
+  identifier /foo/), but if `allow_periods_in_identifiers` in the site
+  configuration is true, a file can have only one extension (e.g.
+  content/blog/stuff.entry.html will have the identifier /blog/stuff.entry/).
+
 == 3.0.4
 
 * Fixed a bug which would cause the filesystem_compact data source to
