added release notes for 3.0.6
--HG--
branch : 3.0.x

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,12 @@
 = nanoc News
 
+== 3.0.6
+
+* Error checking in `filesystem_combined` has been improved [Brian Candler]
+* Generated HTML files now have a default encoding of UTF-8
+* Periods in identifiers for layouts now behave correctly
+* The `relativize_paths` filter now correctly handles “/” [Eric Sunshine]
+
 == 3.0.5
 
 * Restored pre-3.0.3 behaviour of periods in identifiers. By default, a file
