--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,12 @@
 = nanoc News
 
+== 3.0.8
+
+* #atom_tag_for now works with base_urls that contain a path [Eric Sunshine]
+* Generated root URLs in #atom_feed now end with a slash [Eric Sunshine]
+* Autocompiler now recognises requests to index files
+* Blogging helper now allows created_at to be a Time instance
+
 == 3.0.7
 
 * Fixed bug which could cause layout rules not be matched in order
