added 3.0.9 release notes
--HG--
branch : 3.0.x

--- a/NEWS.rdoc
+++ b/NEWS.rdoc
@@ -1,5 +1,10 @@
 = nanoc News
 
+== 3.0.9
+
+* Fixed 1.8.x parsing bug due to lack of parens which could cause “undefined
+  method `to_iso8601_time` for #<String:0x…>” errors
+
 == 3.0.8
 
 * #atom_tag_for now works with base_urls that contain a path [Eric Sunshine]
